ojModule Chapter done

--- a/package.json
+++ b/package.json
@@ -2,6 +2,9 @@
   "name": "ojet-5-examples",
   "version": "1.0.0",
   "description": "Oracle JavaScript Extension Toolkit(JET) v5 Examples",
+  "scripts": {
+    "serve": "node_modules/.bin/http-serve ."
+  },
   "dependencies": {
     "@oracle/oraclejet": "~5.0.0",
     "lodash": "^4.17.5"
@@ -10,6 +13,7 @@
     "body-parser": "^1.9.0",
     "cors": "^2.4.2",
     "express": "^4.9.7",
+    "http-serve": "^1.0.1",
     "http-server": "^0.11.1"
   }
 }
